# openremap-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cli.md  confidence.md  integration.md  setup.md
docs/commands/: commands.md  families.md  identify.md  tune.md  validate.md  workflow.md
docs/install/: developers.md  windows.md
docs/manufacturers/: bosch.md
openremap/: __init__.py
openremap/cli/commands/: cook.py  identify.py  scan.py  tune.py  validate.py
openremap/core/manufacturers/: __init__.py
openremap/core/schemas/: analyzer.py
openremap/core/services/: annotator.py  identifier.py  patcher.py  recipe_builder.py  validate_exists.py  validate_patched.py  validate_strict.py
openremap/tui/: app.py
src/openremap/cli/: main.py
tests/checksum/: test_checksum_original.py
tests/cli/: test_cli_commands.py  test_cli_cook.py  test_cli_identify.py  test_cli_main.py  test_cli_scan.py  test_cli_tune.py  test_cli_validate.py
tests/schemas/: test_schemas.py
tests/tuning/: test_annotator.py  test_confidence.py  test_identifier.py  test_patcher.py  test_patcher_collision_safety.py  test_recipe_builder.py  test_recipe_creation_safety.py  test_validate_exists.py  test_validate_patched.py  test_validate_strict.py
tests/tuning/manufacturers/: test_edc15_extractor.py  test_edc16_extractor.py  test_edc17_extractor.py  test_edc1_extractor.py  test_edc3x_extractor.py  test_ems2000_extractor.py  test_lh_extractor.py  test_m1x55_extractor.py  test_m1x_extractor.py  test_m2x_extractor.py  test_m3x_extractor.py  test_m4x_extractor.py  test_m5x_extractor.py  test_me7_extractor.py  test_me9_extractor.py  test_mono_extractor.py  test_motronic_legacy_extractor.py  test_mp9_extractor.py  test_ppd_extractor.py  test_sid801_extractor.py  test_sid803_extractor.py  test_simos_extractor.py  (+1 more)
(+76 files in other folders)
