[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openremap"]

[tool.uv]
package = true

[project]
name = "openremap"
version = "0.4.3"
description = "ECU binary analysis and patching toolkit — diff, validate, and apply tuning recipes to automotive ECU binaries."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "typer>=0.15.0",
    "rarfile>=4.2",
    "pydantic>=2",
    "textual>=0.80",
]

[project.scripts]
openremap     = "openremap.cli.main:main"
openremap-tui = "openremap.tui.main:run"

[project.urls]
Homepage = "https://www.openremap.com"
Documentation = "https://www.openremap.com/docs"
Repository = "https://github.com/Openremap/openremap-core"
"Bug Tracker" = "https://github.com/Openremap/openremap-core/issues"
Changelog = "https://github.com/Openremap/openremap-core/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
